@@ -7,6 +7,8 @@ extern "C" {
 
 #include <stdint.h>
 
+#define KERNAUX_NTOA_DEFAULT_PREFIX_16 "0x"
+
 // "1111111111111111111111111111111111111111111111111111111111111111"
 #define KERNAUX_UTOA_MIN_BUFFER_SIZE (64 + 1)
 
@@ -21,12 +23,12 @@ extern "C" {
 // "-9223372036854775808"
 #define KERNAUX_ITOA10_BUFFER_SIZE (20 + 1)
 
-// "ffffffffffffffff"
-#define KERNAUX_UTOA16_BUFFER_SIZE (16 + 1)
+// "0xffffffffffffffff"
+#define KERNAUX_UTOA16_BUFFER_SIZE (16 + 2 + 1)
 
-// "7fffffffffffffff"
-// "-8000000000000000"
-#define KERNAUX_ITOA16_BUFFER_SIZE (17 + 1)
+// "0x7fffffffffffffff"
+// "-0x8000000000000000"
+#define KERNAUX_ITOA16_BUFFER_SIZE (17 + 2 + 1)
 
 char *kernaux_utoa(uint64_t value, char *buffer, int base, const char *prefix);
 char *kernaux_itoa(int64_t  value, char *buffer, int base, const char *prefix);
